# r3

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/controller/: auth.rs  bucket.rs  mod.rs  multipart.rs  object.rs  versioning.rs
