[package]
name = "r3"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
bytes = "1.6.0"
env_logger = "0.11.3"
guid-create = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
md5 = "0.7"
uuid = { version = "1.6", features = ["v4"] }
bcrypt = "0.15"

[dev-dependencies]
actix-rt = "2.9"
